# neuro

./: .gitignore  CMakeLists.txt  README.md
source/: ActivationFunctions.h  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp
